# htwk-calendar

./: .groups  Cargo.toml  Procfile  deploy.sh
frontend/: astro.config.mjs  package-lock.json  package.json  tailwind.config.cjs
frontend/src/components/: Backdrop.tsx  Buttons.tsx  Calendar.ts  Calendar.tsx  GroupSelection.tsx  Inner.tsx  Overlay.tsx  Settings.tsx  Sidebar.tsx
frontend/src/layouts/: Layout.astro
frontend/src/pages/: index.astro
frontend/src/scripts/: faculties.ts  state.ts  utils.ts
server/: Cargo.toml
server/src/: faculties.rs  main.rs  scrape.rs
src/: events.rs  faculties.rs  main.rs  meta.rs  middleware.rs  prelude.rs  scrape.rs
web/: package-lock.json  package.json
web/src/components/: Calendar.ts  GroupSelection.tsx
web/src/layouts/: Layout.astro
web/src/pages/: index.astro
