[package]
name = "htwk-calendar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros"] }
color-eyre = "0.6.2"
quick-xml = { version = "0.30.0", features = ["async-tokio", "serde", "serialize"] }
reqwest = "0.11.20"
serde = { version = "1.0.188", features = ["derive"] }
table-extract = { git = "https://github.com/CreatorSiSo/table-extract.git", rev = "9ee22f66205607757be7b27559de83eb986069cf" }
time = { version = "0.3.29", features = ["serde", "formatting"] }
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
